--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sound Cloud</title>
     <script src="//connect.soundcloud.com/sdk.js"></script>
-    <script src="./main.js"></script>
-    <script src="./jquery-3.3.1.js"></script>
-    <script src="./jquery-3.3.1.min.js"></script>
+
+    <script src="jquery-3.3.1.js"></script>
+    <script src="jquery-3.3.1.min.js"></script>
+    <script src="main.js"></script>
 
 </head>
 
